some new info was added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛР3_Web_Фрицький</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    </style>
 </head>
-<body>
-    <p align=center font-size = 40>Інформація про компанію </p>
+<body bgcolor="#ededed">
+   
+    <div class=top> <p>Інформація про компанію "УкрТовТранс"</p>
+    
+    </div> 
+   
+  
+    <div class=list>
+        <h4>Інформація про працівників</h4>
+        <ul>
+            <li>Кількість:250</li>
+            <li>З них працюють дистанційно:40</li>
+            <li>Середня зарплатня: 14000 грн.</li>
+        </ul> 
+
+    <h4> Напрями діяльності</h4>
+        
+        <dl>
+            <dt>Надання послуг логіста:</dt>
+            <dd>Наш логіст знайде найкращий маршрут з найкоротшою дистанцією для Вашого вантажу</dd>
+            <dt>Доставка матеріалів:</dt>
+            <dd>Обирайте зручний час,місце та транспорт під Ваші потреби</dd>
+   
+        </dl>
+    </div>
+    <br>
+    <br>
+    <div class =info> 
+
+        <p>Де нас знайти?</p>
+        Наші контакти: <br>
+        Номер: +380 55 665 6005<br>
+               +380 65 665 6005 <br>
+        Адреса: Вулиця Перемоги 14<br>
+    </div>
 </body>
 </html>
