--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         Номер: +380 55 665 6005<br>
                +380 65 665 6005 <br>
         Адреса: Вулиця Перемоги 14<br>
+        Email: somerondomemail@gmail.com
     </div>
 </body>
 </html>
