New html file and image folder was added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
     </style>
+    
 </head>
 <body bgcolor="#ededed">
    
@@ -33,9 +34,15 @@
             <dd>Обирайте зручний час,місце та транспорт під Ваші потреби</dd>
    
         </dl>
+    <h4>Партнери компанії</h4>
+        <ol>
+            <li>"Укравтозапчастина"</li>
+            <li>"Дніпросталь"</li>
+            <li>"Оріхівсільмаш"</li>
+        </ol>
     </div>
     <br>
-    <br>
+    
     <div class =info> 
 
         <p>Де нас знайти?</p>
@@ -44,6 +51,13 @@
                +380 65 665 6005 <br>
         Адреса: Вулиця Перемоги 14<br>
         Email: somerondomemail@gmail.com
+    </div>
+    <br>
+    <div class = running > 
+        <marquee
+         behavior="scroll" direction="right" bgcolor = "#C9A2DD"> 
+         Тут могла бути ваша реклама,але ви за неї не заплатили
+        </marquee>
     </div>
 </body>
 </html>
